# Chess2D

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
include/chess2D/: board.h  board_renderer.h  game_screen.h  input.h
include/chess_engine/: bitboard_util.h  board_rep.h  board_state.h  fen_util.h  hash_keys.h  magics.h  move.h  move_generator.h  piece_list.h  pieces.h  precomp_move_data.h
include/search/: evaluation.h  move_order_util.h  search.h  trans_table.h
src/: CMakeLists.txt  main.cpp
src/chess2D/: board.cpp  board_renderer.cpp  game_screen.cpp
src/chess_engine/: board_state.cpp  hash_keys.cpp  magics.cpp  move_generator.cpp  piece_list.cpp  precomp_move_data.cpp
tests/: CMakeLists.txt  chess_engine_test.cpp  clay_test.cpp  engine_probe.py  evaluation_test.cpp  perft_split_compare.py  perft_test.py  search_benchmark_test.cpp  stockfish_move_compare.py  versus_test.cpp
utils/: logger.cpp  profiler.cpp
utils/include/: logger.h  profiler.h  thread_pool.h
